fix wrap

--- a/src/_scss/pages/state/overview/_details.scss
+++ b/src/_scss/pages/state/overview/_details.scss
@@ -37,7 +37,7 @@
                     display: flex;
                     line-height: 1.5;
                     align-content: center;
-                    flex-wrap: wrap;
+                    flex-wrap: nowrap;
 
                     .tooltip-wrapper {
                         @media(min-width: $tablet-screen) and (max-width: $medium-screen) {
